[package]
name = "webauthn-helper"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "WebAuthn/FIDO2 CLI helper for OpenWrt routers"

[dependencies]
webauthn_rp = { version = "0.3", features = ["serde_relaxed", "serializable_server_state"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
anyhow = "1"
thiserror = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
data-encoding = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Optimize compilation size
[profile.dev]
panic = "abort"

[profile.release]
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
